# lawyer_agent

./: .gitignore  LICENSE  README.md
app/: main.py  pyproject.toml
app/scripts/: codex_to_json.py  splitter.py  upload_json_codex_to_qdrant.py
app/src/api/: __init__.py
app/src/api/v1/: __init__.py  document.py
app/src/application/agent/: llm_agent_orchestrator.py
app/src/application/tools/: __init__.py  analyze_risk.py  analyze_risk_rent.py  relevant_search.py
app/src/di/: __init__.py  agent_provider.py  infra_provider.py  tools_provider.py
app/src/domain/models/: document.py
app/src/domain/services/: iembedder.py  ipdf_adapter.py  ivdb_adapter.py
app/src/infra/documents/: tools.py
app/src/infra/embeddings/: bge.py
app/src/infra/pdf/: pypdf2_adapter.py
app/src/infra/vdb/: qdrant_adapter.py
app/src/shared/: config.py
