[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dishka>=1.7.2",
    "fastapi>=0.128.0",
    "langchain-gigachat>=0.3.12",
    "langgraph>=1.0.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
]
